# Practica-Gazebo

./: README.md
catkin_ws/: nombreDelMapa1.pgm  nombreDelMapa1.yaml
catkin_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/devel/include/amcl/: AMCLConfig.h
catkin_ws/devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelPluginConfig.h
catkin_ws/devel/include/global_planner/: GlobalPlannerConfig.h
catkin_ws/devel/lib/amcl/: amcl
catkin_ws/devel/lib/base_local_planner/: point_grid
catkin_ws/devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
catkin_ws/devel/lib/fake_localization/: fake_localization
catkin_ws/devel/lib/global_planner/: planner
catkin_ws/devel/lib/gmapping/: slam_gmapping  slam_gmapping_replay
catkin_ws/devel/lib/map_server/: map_saver  map_server  rtest
catkin_ws/devel/lib/move_base/: move_base
catkin_ws/devel/lib/navfn/: navfn_node
catkin_ws/devel/lib/pkgconfig/: amcl.pc  base_local_planner.pc  carrot_planner.pc  clear_costmap_recovery.pc  costmap_2d.pc  dwa_local_planner.pc  fake_localization.pc  global_planner.pc  gmapping.pc  map_msgs.pc  map_server.pc  move_base.pc  move_base_msgs.pc  move_slow_and_clear.pc  (+26 more)
gazebo-tools-master/: gazebo-map-from-csv.py  map.world.clean.xml  map.world.maze.xml
gazebo-tools-master/assets/: clean.csv  maze.csv
gazebo-tools-master/plugins/model_push_g9/: CMakeLists.txt  README.md  model_push.cc  model_push.world
gazebo-tools-master/plugins/move_plugin/: CMakeLists.txt  move_plugin.cc
gazebo-tools-master/plugins/my_wheels_g9/: my_wheels.cc
(+89 files in other folders)
