cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
project(move_plugin)
find_package(gazebo REQUIRED)
include_directories(${GAZEBO_INCLUDE_DIRS})
link_directories(${GAZEBO_LIBRARY_DIRS})
list(APPEND CMAKE_CXX_FLAGS "${GAZEBO_CXX_FLAGS}")
add_library(move_plugin SHARED move_plugin.cc)
target_link_libraries(move_plugin ${GAZEBO_LIBRARIES})
